dev: add task 3 with tests

--- a/Homeworks/Homework2/Homework2/Homework2.fsproj
+++ b/Homeworks/Homework2/Homework2/Homework2.fsproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <Compile Include="EvenCounter.fs" />
         <Compile Include="MapForBinaryTree.fs" />
+        <Compile Include="EvalForArithmeticTree.fs" />
     </ItemGroup>
 
 </Project>
