dev: add task 4 with tests

--- a/Homeworks/Homework2/Homework2/Homework2.fsproj
+++ b/Homeworks/Homework2/Homework2/Homework2.fsproj
@@ -10,6 +10,7 @@
         <Compile Include="EvenCounter.fs" />
         <Compile Include="MapForBinaryTree.fs" />
         <Compile Include="EvalForArithmeticTree.fs" />
+        <Compile Include="PrimeNumbers.fs" />
     </ItemGroup>
 
 </Project>
