--- a/Homeworks/Homework4/H4Task2/H4Task2.fsproj
+++ b/Homeworks/Homework4/H4Task2/H4Task2.fsproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Program.fs"/>
+        <Compile Include="Library.fs"/>
     </ItemGroup>
 
 </Project>
